--- a/2-html-css-js/6-landing-page/css/index.css
+++ b/2-html-css-js/6-landing-page/css/index.css
@@ -14,6 +14,7 @@ body {
     font-family: "Roboto", sans-serif;
     width: 100%;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 header {
@@ -41,34 +42,94 @@ header {
     transition: transform 0.5s ease;
 }
 
-.navbar {
+.nav {
     display: flex;
-    justify-content: center;
-    align-items: center;   
+    width: 100%;  
+    justify-content: space-around;
 }
 
-.navbar ul {
-    display: flex;
-    justify-content: center; 
-    text-transform: uppercase; 
-    list-style-type: none;   
+.nav li {    
+    list-style-type: none;
 }
 
-.navbar li {    
-    margin-right: 30px;
-}
-
-.navbar li a {    
-    text-decoration: none;
+.nav li a {    
     color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 1px;
+    cursor: pointer;
+    padding: 10px;
 }
 
-.btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 40px;
-    margin-left: 20vw;     
-    border: none;
-    cursor: pointer;    
+.nav li:hover a {
+    color: var(--primary);
 }
+
+.search {
+    position: relative;
+    width: 130px;
+    height: 40px;
+    transition: 0.5s;
+}
+
+.search:hover {
+    width: 300px;
+}
+
+.search input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    color: #ffffff;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    outline: none;
+    border-radius: 4px;
+    padding: 0 10px 0 5px;
+}
+
+.search input::placeholder {
+    color: #ffffff;
+    text-transform: uppercase;
+    transform: translateX(5px);
+    font-weight: 300;
+}
+
+.swiper {
+    width: 100%;
+    height: 100vh;
+}
+
+.swiper .swiper-wrapper {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.swiper .swiper-wrapper .swiper-slide {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper .swiper-wrapper .swiper-slide::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.6)
+}
+
+.swiper .swiper-wrapper .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
